<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="reiniciarValores"
    tools:context="com.juvera.conexionwifi.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/activity_vertical_margin">


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_conexion_tcp_ip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnReiniciar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="reiniciarValores"
                android:text="@string/reniciar" />


        </TableRow>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnEstado"
            app:layout_constraintTop_toTopOf="@+id/btnEstado">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/estado_wifi"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtEstado"
                app:layout_constraintEnd_toStartOf="@+id/txtEstado"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_estado"
                app:layout_constraintBottom_toBottomOf="@+id/btnEstado"
                app:layout_constraintEnd_toStartOf="@+id/btnEstado"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/btnEstado" />

            <Button
                android:id="@+id/btnEstado"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mostrarEstado"
                android:text="@string/estado"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtEstado" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/conectividad_ip"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtPing"
                app:layout_constraintEnd_toStartOf="@+id/txtPing"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtPing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_ping"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnPing"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnPing"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="hacerPing"
                android:text="@string/ping_ip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtPing"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/direccion_ip"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtIP"
                app:layout_constraintEnd_toStartOf="@+id/txtIP"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_ip"
                app:layout_constraintBottom_toBottomOf="@+id/btnIP"
                app:layout_constraintEnd_toStartOf="@+id/btnIP"
                app:layout_constraintStart_toEndOf="@+id/textIP"
                app:layout_constraintTop_toTopOf="@+id/btnIP" />

            <Button
                android:id="@+id/btnIP"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mostrarIP"
                android:text="@string/ip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtIP" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/velocidad_de_enlace"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtVelocidad"
                app:layout_constraintEnd_toStartOf="@+id/txtVelocidad"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtVelocidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_velocidad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnVelocidad"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/btnVelocidad" />

            <Button
                android:id="@+id/btnVelocidad"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mostrarVelocidad"
                android:text="@string/velocidad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtVelocidad"
                app:layout_constraintTop_toTopOf="parent"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/red_inalambrica"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtNombre"
                app:layout_constraintEnd_toStartOf="@+id/txtNombre"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_nombre"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnNombre"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/btnNombre" />

            <Button
                android:id="@+id/btnNombre"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mostrarNombreConexion"
                android:text="@string/nombre_conexion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtNombre"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/simpleWifiSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/wifi"
                android:textOff="@string/off"
                android:textOn="@string/on" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conexion_datos_moviles"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnReiniciarDatos"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="reiniciarValores"
                android:text="@string/reniciar" />


        </TableRow>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/estado_datos"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtEstadoDatos"
                app:layout_constraintEnd_toStartOf="@+id/txtEstadoDatos"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtEstadoDatos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_estado"
                app:layout_constraintEnd_toStartOf="@+id/btnEstadoDatos"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="parent" />

            <Button
                android:id="@+id/btnEstadoDatos"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="mostrarEstadoDatos"
                android:text="@string/estado"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtEstadoDatos" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </TableLayout>

</FrameLayout>